Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
dev
-
None
-
ab4bb5077 (dev), 37048d041 (dev), b44828959 (6.6), ef144f2e3 (6.6), 2081abcf2 (tqtc/lts-6.5), 54749794f (tqtc/lts-6.2)
Description
The test reports memory leaks from multiple test cases. A brief look showed that at least the one in tst_QStandardItemModel::getMimeDataWithInvalidModelIndex() is valid.
The full log is attached.
Attachments
For Gerrit Dashboard: QTBUG-116532 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
518042,1 | QStandardItemModel: don't leak in mimeData() | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |
517609,3 | QStandardItemModel: don't leak in mimeData() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
517610,2 | tst_qstandarditemmodel: fix memleaks | dev | qt/qtbase | Status: MERGED | +2 | 0 |
517678,2 | QStandardItemModel: don't leak in mimeData() | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
517679,2 | tst_qstandarditemmodel: fix memleaks | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
517758,2 | QStandardItemModel: don't leak in mimeData() | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
517820,2 | QStandardItemModel: don't leak in mimeData() | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |